# polarsNBA

./: PolarNBA.ipynb  README.md  main.py  pyproject.toml
Benchmark Polars vs Pandas/: POLARS_VS_PANDAS.ipynb
notebooks/: GAMES.ipynb  Games.ipynb  LEAGUE_SCHEUDLE.ipynb  PLAYERS.ipynb  PLAYER_STATS.ipynb  Players.ipynb  Players_stats.ipynb  PolarNBA.ipynb  Schedule.ipynb  TEAM_HISTORIES.ipynb  TEAM_STATS.ipynb  Team_stats.ipynb
