[project]
name = "polarsnba"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "polars>=1.31.0",
    "pandas>=2.0.0",
    "kagglehub[polars-datasets]>=1.0.0",
    "hvplot>=0.12.2",
    "pyarrow>=23.0.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
]
